force-app/main/default/objects/ARTL_QuoteMember_Contact__c/ARTL_QuoteMember_Contact__c.object-meta.xml
<CustomObject>
    <label>QuoteMember Contact</label>
    <nameField>
        <label>QuoteMemberContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuoteMember Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>