force-app/main/default/objects/ARTL_QuoteMember_Contact__c/fields/ARTL_Contact__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QuoteMember Contact</relationshipLabel>
    <relationshipName>QuoteMember_Contact</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>