force-app/main/default/objects/ARTL_QuoteMember_Contact__c/fields/ARTL_Quote_Member__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Quote_Member__c</fullName>
    <label>Quote Member</label>
    <referenceTo>vlocity_cmt__QuoteMember__c</referenceTo>
    <relationshipLabel>QuoteMember Contact</relationshipLabel>
    <relationshipName>QuoteMember_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>