force-app/main/default/objects/ARTL_QuoteMember_Contact__c/fields/ARTL_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCP</fullName>
            </value>
            <value>
                <fullName>LCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>